--- a/index.css
+++ b/index.css
@@ -452,11 +452,14 @@ ul {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 40px;
+  justify-items: center;
 }
 .gallery .boxs .box {
-  padding: 10px;
-  position: relative;
-  background-color: white;
+      padding: 10px;
+    position: relative;
+    background-color: white;
+    width: 360px;
+    height: 400px;border-radius: 11px;
 }
 
 .gallery .container .boxs .box::before {
@@ -480,13 +483,22 @@ ul {
 
 .gallery .boxs .box img {
   max-width: 100%;
+      height: 100%;
+    width: 100%;border-radius: 10px;
   transition: var(--main-transition);
 }
 .gallery .boxs .box:hover img {
   transform: scale(1.2) translate(-15px, -14px);
   transition-delay: 0.25s;
 }
+@media (max-width:766px) {
+  .gallery .boxs .box   {
+    max-width: 94%;
 
+  }
+  .gallery .boxs .box:hover img {
+    transform: scale(1.2);}
+}
 /*! end gallery ******************************************************************* */
 /* ? start features*********************************************************************** --> */
 .features {
@@ -569,8 +581,141 @@ ul {
 .features .container .box:hover a {
   color: white;
 }
-.random-photo,.random-photo1,.random-photo2{
-  width: 501px;
-  height: 560px;border-radius: 22px;
-  max-width: 100%;
+/* CSS code for photo animation */
+.change-list-photo {
+  transition: transform 0.5s ease-in-out;
+  transform-style: preserve-3d;
+  transform-origin: center;
 }
+
+.change-list-photo.rotate-out {
+  transform: rotateY(-90deg);
+}
+
+/* CSS code for 3D photo animation */
+.myphoto {
+  transition: var(--main-transition);
+  border-radius: 50px;
+  padding: 10px;
+}
+@media (max-width: 780px) {
+.myphoto {
+  display: flex;
+width: 400px;
+margin: auto;
+}
+}
+
+.features .container .box:hover .myphoto{
+transform: scale(1.5) rotateY(160deg) ;
+   /* transform: rotateY(160deg); */
+ 
+}
+.change-list-photo1.rotate-out{
+  transform: rotatex(-90deg);
+
+}
+.change-list-photo1{
+  transition: transform 0.5s ease-in-out;
+  transform-style: preserve-3d;
+  transform-origin: center;
+}
+
+
+
+
+
+.rotate-out1 {
+  animation: rotate-out 0.5s ease-in-out forwards;
+}
+
+@keyframes rotate-out {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+   }
+
+  100% {
+    transform: rotateY(360deg);
+    opacity: 0;
+  }
+}
+
+
+
+
+
+
+
+
+.my_profile{
+ padding :50px 0;
+}
+ 
+.my_profile .myeslam{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+ 
+.my_profile .myeslam p{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #666;
+  text-transform: capitalize;
+  width: 50%;
+}
+.my_profile .myeslam p span{
+  color: red;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.my_profile .myeslam img{
+  width: 300px;
+  height: 500px;
+ 
+  margin: 20px 0;
+  border: 2px solid #ccc;
+  box-shadow: 2px 2px 5px #999;
+   animation: pulse 2s infinite;
+ 
+ }
+ .my_profile .container video{
+  padding-top: 45px;
+  max-width: 100%;
+ }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+ 
+@media (max-width: 780px) 
+{
+  .my_profile .myeslam{
+  flex-direction: column-reverse;
+}
+.my_profile .myeslam img{
+  margin: 20px 0 60px 0;
+}
+.my_profile .myeslam p{    width: 100%;
+  padding: 10px;}
+
+  
+} 
+
+
+
+
