--- a/index.css
+++ b/index.css
@@ -68,7 +68,9 @@ ul {
 .header {
   background-color: white; /* Background color */
   box-shadow: 0 0 10px #ddd; /* Shadow for header */
-  position: relative; /* Set position for child elements */
+  position: sticky; /* Set position for child elements */
+  top: 0 ;
+z-index: 9999;
 }
 
 /* Container within header */
@@ -77,7 +79,7 @@ ul {
   justify-content: space-between; /* Space items evenly */
   align-items: center; /* Vertically align items */
   flex-wrap: wrap; /* Wrap items on smaller screens */
-  position: relative; /* Set position for child elements */
+  position: sticky; /* Set position for child elements */
 }
 
 /* Logo styles */
@@ -179,7 +181,7 @@ ul {
 
 .megamenue .links li a:hover {
   color: rgb(0, 12, 117);
-  font-weight: bolder;
+ 
 }
 
 .megamenue .image img {
@@ -196,9 +198,7 @@ ul {
   .megamenue .links > li > a {
     font-size: 16px;
   }
-  .megamenue .links > li > a:hover {
-    font-weight: 800;
-  }
+  
 }
 /*! end header ********************************************************************************/
 .landing {
@@ -305,9 +305,10 @@ ul {
 .main-title {
   border: 2px solid;
   text-align: center;
-  width: 200px;
-  padding: 10px;
-  text-transform: uppercase;
+  width: fit-content;
+  padding: 10px 40px;
+ cursor: progress;
+  text-transform: capitalize;
   margin: 0 auto 50px;
   font-weight: bold;
   position: relative;
@@ -357,7 +358,7 @@ ul {
   100% {
     border-radius: 0;
     right: 0;
-    width: 50%;
+    width: 51%;
     height: 100%;
   }
 }
@@ -370,7 +371,7 @@ ul {
   100% {
     border-radius: 0;
     left: 0;
-    width: 50%;
+    width: 51%;
     height: 100%;
   }
 }
@@ -515,12 +516,14 @@ ul {
 }
 .features .container .box h2 {
   padding: 20px;
-  font-size: 35px;
-  text-transform: capitalize;
+   text-transform: capitalize;
   border-bottom: solid 7px red;
   width: fit-content;
   display: flex;
-  margin: 20px auto;
+  margin:  auto;
+  font-size: 24px;
+  text-align: center;
+  height: 135px;
 }
 .features .container .box:nth-child(2) h2,
 .features .container .box:nth-child(2) a {
@@ -721,3 +724,40 @@ transform: scale(1.3)  rotateY(160deg) ;
 
   
 }  
+/*! button top scrool  */
+#top_scrool{
+  position: fixed;
+  z-index: 100;
+  right: 30px;
+  bottom: 67px;
+ display: none;
+ animation: scrool  3s  ease-in-out infinite; ;
+ transition: var(--main-transition);
+}
+@keyframes scrool {
+  0%,20%,40%,60%,80%,100%{
+    bottom: 45px;
+  }
+  10%,30%,50%,70%,90%{
+    bottom: 67px;
+  }
+}
+  #top_scrool i {
+    font-weight: 900;
+    font-size: 67px;
+    color: #3d3db3;
+   
+  }
+  #top_scrool:hover {
+  cursor: pointer;
+  }
+  @media(max-width:776px) {
+  #top_scrool i {
+  font-size: 35px;
+}
+  
+#top_scrool{
+  right: 4px;
+}
+  }
+  /*! end button top scrool  */
